--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,4 @@
 <resources>
-    <string name="app_name">My Application</string>
-    <string name="title_activity_maps">Map</string>
+    <string name="app_name">ETS Bus Stops</string>
+    <string name="title_activity_maps">ETS Bus Stops</string>
 </resources>
